# RAG_ON_CODE

./: .gitignore  README.md  app.py  app2.py  embeddings.py  main.py  pyproject.toml  requirements.txt
